--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Guia de Comandos</h2>
-        <input type="text" id="commandInput" placeholder="Digite um comando e aperte enter...">
+        <input type="text" id="commandInput" placeholder="Digite um comando e aperte enter... Ex. digite 'help'">
         <div class="button-container">
             <button class="search-btn" onclick="processCommand()">Buscar</button>
             <button class="clear-btn" onclick="clearInput()">Limpar</button>
